set(CLRA_DOCUMENTATION_INSTALL documentation/clra)

install(FILES Doxyfile DESTINATION ${CLRA_DOCUMENTATION_INSTALL})
install(FILES DoxygenLayout.xml DESTINATION ${CLRA_DOCUMENTATION_INSTALL})
install(FILES modules.dox DESTINATION ${CLRA_DOCUMENTATION_INSTALL})
install(FILES tutorial.dox DESTINATION ${CLRA_DOCUMENTATION_INSTALL})
install(FILES clradoxygen.css DESTINATION ${CLRA_DOCUMENTATION_INSTALL})
install(PROGRAMS sectionfixer.sh DESTINATION ${CLRA_DOCUMENTATION_INSTALL})

install(FILES ${CLRA_ROOT}/README.md DESTINATION ${CLRA_DOCUMENTATION_INSTALL})

set(CLRA_VERSION "${CMAKE_CURRENT_BINARY_DIR}/clraversion.dox")
file(WRITE ${CLRA_VERSION} "PROJECT_NUMBER = \"v${CMAKE_PROJECT_VERSION}\"")
install(FILES ${CLRA_VERSION} DESTINATION ${CLRA_DOCUMENTATION_INSTALL})
