#-----------------------------------------------
# sources setup
#-----------------------------------------------
set(CMPI_SRC
	)

set(CMPI_HPP
	)

#-----------------------------------------------
# target setup
#-----------------------------------------------
#add_library(${CMPI_LIB} SHARED ${CMPI_SRC})

#-----------------------------------------------
# dependencies setup
#-----------------------------------------------
# target_include_directories(${CMPI_LIB} PRIVATE ${SOME_INC_DIR})
# target_link_libraries(${CMPI_LIB} ${SOME_LIB})

#-----------------------------------------------
# installation setup
#-----------------------------------------------
#set(CMPI_HPP_INSTALL include/cmpi)
#set(CMPI_LIB_INSTALL lib)

#install(FILES   ${CMPI_HPP} DESTINATION ${CMPI_HPP_INSTALL})
#install(TARGETS ${CMPI_LIB} DESTINATION ${CMPI_LIB_INSTALL})

#-----------------------------------------------
# end
#-----------------------------------------------
